--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,36 @@ python-dateutil==2.6.0
 flask-moment==0.11.0
 flask-wtf==0.14.3
 flask_sqlalchemy==2.4.4
+alembic==1.5.8
+appdirs==1.4.4
+astroid==2.5.3
+autopep8==1.5.6
+Babel==2.9.0
+Click==7.0
+distlib==0.3.1
+docformatter==1.4
+filelock==3.0.12
+Flask==1.0.3
+Flask-Migrate==2.7.0
+Flask-Moment==0.11.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+greenlet==1.0.0
+isort==5.8.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+lazy-object-proxy==1.6.0
+Mako==1.1.4
+MarkupSafe==1.1.1
+mccabe==0.6.1
+psycopg2-binary==2.8.6
+pycodestyle==2.7.0
+pytz==2021.1
+six==1.15.0
+SQLAlchemy==1.4.8
+toml==0.10.2
+untokenize==0.1.1
+virtualenv==20.4.3
+Werkzeug==0.15.5
+wrapt==1.12.1
+WTForms==2.3.3
